Implementing cadastrar() method

--- a/src/app/componente11/componente11.component.html
+++ b/src/app/componente11/componente11.component.html
@@ -41,10 +41,10 @@
 
 
     @if(btnCadastrar)  { 
-        <input type="button" value="Cadastrar" class="btn btn-primary" [disabled]="formulario.invalid">
+        <input type="button" value="Cadastrar" 
+        (click)="cadastrar()" class="btn btn-primary" [disabled]="formulario.invalid">
     }
     @else {
-        <input type="button" value="Cadastrar" class="btn btn-primary" [disabled]="formulario.invalid">
     <input type="button" value="Alterar" class="btn btn-primary" [disabled]="formulario.invalid">
     <input type="button" value="Remover" class="btn btn-primary">
     <input type="button" value="Cancelar" class="btn btn-primary">
@@ -63,6 +63,12 @@
         </tr>
     </thead>
     <tbody>
-
+        <tr *ngFor="let v of vetor; index as indice">
+            <td>{{ indice }}</td>
+            <td>{{ v.nome }}</td>
+            <td>{{ v.idade }}</td>
+            <td>{{ v.cidade }}</td>
+            <td><button class="btn btn-primary">Selecionar</button></td>
+        </tr>
     </tbody>
 </table>
