Implementing table body

--- a/src/app/componente11/componente11.component.html
+++ b/src/app/componente11/componente11.component.html
@@ -64,7 +64,7 @@
     </thead>
     <tbody>
         <tr *ngFor="let v of vetor; index as indice">
-            <td>{{ indice }}</td>
+            <td>{{ indice + 1}}</td>
             <td>{{ v.nome }}</td>
             <td>{{ v.idade }}</td>
             <td>{{ v.cidade }}</td>
