--- a/src/app/componente11/componente11.component.html
+++ b/src/app/componente11/componente11.component.html
@@ -45,7 +45,7 @@
         (click)="cadastrar()" class="btn btn-primary" [disabled]="formulario.invalid">
     }
     @else {
-    <input type="button" value="Alterar" class="btn btn-primary" [disabled]="formulario.invalid">
+    <input type="button" value="Alterar" (click)="alterar()" class="btn btn-primary" [disabled]="formulario.invalid">
     <input type="button" value="Remover" class="btn btn-primary">
     <input type="button" value="Cancelar" class="btn btn-primary">
     }
@@ -68,7 +68,7 @@
             <td>{{ v.nome }}</td>
             <td>{{ v.idade }}</td>
             <td>{{ v.cidade }}</td>
-            <td><button class="btn btn-primary">Selecionar</button></td>
+            <td><button class="btn btn-primary" (click)="selecionar(indice)">Selecionar</button></td>
         </tr>
     </tbody>
 </table>
